--- a/M4U4/views/index.hbs
+++ b/M4U4/views/index.hbs
@@ -4,8 +4,10 @@
 {{/if}}
 
 {{#unless conocido}}
-    <p>No te conozco</p>
+    <p>No te conozco decime tu nombre</p>
     <form action="/ingresar" method="post">
-        <input type="text" name="nombre"><button>Ingresar</button>
+        <input type="text" name="nombre">
+    <p>Y tu edad</p>
+        <input type="int" name="edad"><button>Ingresar</button>
     </form>
 {{/unless}}
